package com.citadel.tictactoe.views.console.core.menus;

import com.citadel.tictactoe.shared.LimitedIntDialog;
import com.citadel.tictactoe.shared.Terminal;
import com.citadel.tictactoe.views.console.core.Module;
import com.citadel.tictactoe.views.console.core.commands.Command;
import com.citadel.tictactoe.views.console.core.commands.ExitCommand;

import java.util.ArrayList;
import java.util.List;
import java.util.stream.Collectors;

public abstract class Menu extends Command {

    protected final List<Command> commands;

    private final ExitCommand exitCommand;

    protected Menu(String title) {
        super(title);
        this.commands = new ArrayList<>();
        this.exitCommand = new ExitCommand();
    }

    @Override
    public void set(Module module) {
        for (Command command : commands) {
            command.set(module);
        }
    }

    @Override
    public void execute() {
        exitCommand.reset();
        do {
            List<Command> available = availableCommands();
            writeln(available);
            int option = new LimitedIntDialog().read("Selecciona una opción", available.size());
            available.get(option - 1).execute();
        } while (!exitCommand.closed());
    }

    private List<Command> availableCommands() {
        List<Command> available = commands.stream().filter(Command::isAvailable).collect(Collectors.toCollection(ArrayList::new));
        available.add(exitCommand);
        return available;
    }

    private void writeln(List<Command> available) {
        Terminal terminal = Terminal.getInstance();
        terminal.clear();
        for (int k = 0; k < 5; k++) {
            terminal.writeln();
        }
        terminal.writeln("  === " + getTitle().toUpperCase() + " ===");
        terminal.writeln();
        for (int i = 0; i < available.size(); i++) {
            terminal.writeln("  [" + (i + 1) + "] " + available.get(i).getTitle());
        }
        terminal.writeln();
    }
}
