@startuml patron-command
hide empty members

abstract class Command {
  -title: String
  +set(Module)
  +isAvailable(): boolean
  {abstract} +execute()
}
abstract class Menu {
  #commands: List<Command>
  -exitCommand: ExitCommand
  -consoleContext: ConsoleContext
  +set(Module)
  +execute()
}
class MainMenu {
  +MainMenu(MainMenuModules, ConsoleContext)
}
class ConsoleContext <<record>>
class MainMenuModules <<record>> {
  +loadModule: Module
  +replayModule: Module
  +statsModule: Module
  +profileModule: Module
  +achievementsModule: Module
}
class GameMenu {
  +GameMenu(ConsoleContext)
}
class ExitCommand
class StartGameCommand {
  +set(Module)
}
class LoadGameCommand {
  -module: Module
  +LoadGameCommand(Module)
}
class ReplayGameCommand {
  -module: Module
  +ReplayGameCommand(Module)
}
class ShowStatsCommand {
  -module: Module
  +ShowStatsCommand(Module)
}
class ProfileCommand {
  -module: Module
  +ProfileCommand(Module)
}
class ShowAchievementsCommand {
  -module: Module
  +ShowAchievementsCommand(Module)
}

Command <|-- Menu
Menu <|-- MainMenu
Menu <|-- GameMenu
Command <|-- ExitCommand
Command <|-- StartGameCommand
Command <|-- LoadGameCommand
Command <|-- ReplayGameCommand
Command <|-- ShowStatsCommand
Command <|-- ProfileCommand
Command <|-- ShowAchievementsCommand

Menu o-> ConsoleContext : consoleContext
MainMenu ..> MainMenuModules : recibe por constructor
MainMenu ..> GameMenu : crea, agrega a commands
MainMenu ..> LoadGameCommand : crea, agrega a commands
MainMenu ..> ReplayGameCommand : crea, agrega a commands
MainMenu ..> ShowStatsCommand : crea, agrega a commands
MainMenu ..> ProfileCommand : crea, agrega a commands
MainMenu ..> ShowAchievementsCommand : crea, agrega a commands
GameMenu ..> StartGameCommand : crea, agrega a commands

note bottom of Menu
  execute() es un bucle: muestra los Command con
  isAvailable()==true, delega en el elegido,
  hasta que ExitCommand marca closed().
  set(Module) difunde a todos los commands hijos.
end note

note right of MainMenuModules
  Parameter Object — agrupa las 5 Module
  para no superar el límite de 3 parámetros
  del constructor de MainMenu
end note

note right of StartGameCommand
  Único caso que sobrescribe Command.set(Module):
  es hijo único (junto a ExitCommand, no-op) de
  GameMenu, así que el broadcast no es ambiguo.
  Los demás comandos reciben su Module por
  constructor porque son 5 hermanos directos de
  MainMenu — un solo set(Module) de Menu les
  pisaría el valor entre sí.
end note

note bottom of ConsoleContext
  Context Object introducido en el refactor de
  Singleton de 2026-07-10 — agrupa ColorView,
  LimitedIntDialog, YesNoDialog y CoordinateView
  (antes 4 Singletons sueltos, sin necesidad real
  de serlo). Se construye una vez en
  TicTacToeApp.main() y se enhebra por constructor
  hasta las ~30 vistas de consola que lo necesitan.
  Ver patron-context-object.puml
end note
@enduml
